--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>
       SPChaudhari
     </title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     This is a site inside my github.
