--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    This is a site inside my github.
+    <h1><center>This is a site inside my github.</center></h1>
   </body>
 </html>
