--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>
       SPChaudhari
     </title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
     <h1><center>This is a site inside my github.</center></h1>
