--- a/index.html
+++ b/index.html
@@ -1,11 +1,3 @@
-<html class="background">
-  <head>
-    <title>
-      SPChaudhari
-    </title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-  </head>
-  <body>
-    <h1><center>This is a site inside my github.</center></h1>
-  </body>
-</html>
+<div class="container">
+
+</div>
