--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
-<div class="container">
-  <link rel="stylesheet"  type="text/css" href="styles.css">
-</div>
+<html class="background">
+  <head>
+    <title>
+      SPChaudhari
+    </title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+  </head>
+  <body>
+    <h1 style="font-family: Helvetica;"><center>This is a site inside my github.</center></h1>
+  </body>
+</html>
