--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-    <h1 style="font-family: Helvetica;"><center>This is a site inside my github.</center></h1>
+    <h1 style="font-family: Courier; color:#00cd00;"><center>welcome.</center></h1>
   </body>
 </html>
