--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-    <h1 style="font-family: Courier; color:#00cd00;"><center>welcome.</center></h1>
+    <h3 style="font-family: Courier; color:#00cd00;"><center><br>welcome.<br>how did you find this website?</center></h3>
   </body>
 </html>
