--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {
 .header {
   padding: 80px;
   text-align: center;
-  background: #000;
+  background: transparent;
   color: #00cd00;
   position: relative;
   overflow: hidden;
