--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {
 .header {
   padding: 80px;
   text-align: center;
-  background: transparent;
+  background: #000;
   color: #00cd00;
   position: relative;
   overflow: hidden;
@@ -125,7 +125,7 @@ body {
 
 <div class="header">
   <video autoplay loop muted playsinline>
-    <source src="https://github.com/Winter262005/winter262005.github.io/blob/main/video%20(1080p).mp4" type="video/mp4">
+    <source src="https://www.pexels.com/video/digital-projection-of-abstract-geometrical-lines-3129671/" type="video/mp4">
   </video>
   <h1>welcome.</h1>
   <p>a website created by me.</p>
