--- a/index.html
+++ b/index.html
@@ -18,20 +18,10 @@ body {
 .header {
   padding: 80px;
   text-align: center;
-  background: #000;
+  background: transparent;
   color: #00cd00;
   position: relative;
   overflow: hidden;
-}
-
-.header video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  z-index: -1;
 }
 
 /* Increase the font size of the heading */
@@ -124,11 +114,11 @@ body {
 <body>
 
 <div class="header">
-  <video autoplay loop muted playsinline>
-    <source src="https://www.pexels.com/video/digital-projection-of-abstract-geometrical-lines-3129671/" type="video/mp4">
+  <video autoplay loop muted playsinline style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1;">
+    <source src="winter262005.github.io/video (1080p).mp4" type="video/mp4">
   </video>
-  <h1>welcome.</h1>
-  <p>a website created by me.</p>
+  <h1 style="position: relative; z-index: 1;">welcome.</h1>
+  <p style="position: relative; z-index: 1;">a website created by me.</p>
 </div>
 
 <div class="navbar">
