--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ body {
 
 <div class="header">
   <video autoplay loop muted playsinline style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1;">
-    <source src="winter262005.github.io/video (1080p).mp4" type="video/mp4">
+    <source src="video (1080p).mp4" type="video/mp4">
   </video>
   <h1 style="position: relative; z-index: 1;">welcome.</h1>
   <p style="position: relative; z-index: 1;">a website created by me.</p>
