--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ body {
   <div class="side">
     <h2>About Me</h2>
     <h5>Bio:</h5>
-    <div class="fakeimg" style="height:100px; width:80px; position:absolute; right: 70px;">Image</div>
+    <div class="fakeimg" style="height:100px; width:80px;">Image</div>
     <p>Winter aka Shubham Chaudhari👋<br>VITB '27🎓<br>Music🎸<br>Photography📸</p>
   </div>
   <div class="main">
