--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {
   padding: 80px;
   text-align: center;
   background: transparent;
-  color: #00cd00;
+  color: #fff;
   position: relative;
   overflow: hidden;
 }
@@ -69,16 +69,18 @@ body {
 .side {
   -ms-flex: 30%; /* IE10 */
   flex: 30%;
-  background-color: #f1f1f1;
+  background-color: #004b7f;
   padding: 20px;
+  color: #6666a2;
 }
 
 /* Main column */
 .main {   
   -ms-flex: 70%; /* IE10 */
   flex: 70%;
-  background-color: white;
+  background-color: #003459;
   padding: 20px;
+  color: #6666a2;
 }
 
 /* Fake image, just for this example */
@@ -115,10 +117,10 @@ body {
 
 <div class="header">
   <video autoplay loop muted playsinline style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1;">
-    <source src="video (1080p).mp4" type="video/mp4">
+    <source src="video (1080p).mp4" type="video/mp4" >
   </video>
-  <h1 style="position: relative; z-index: 1;">welcome.</h1>
-  <p style="position: relative; z-index: 1;">a website created by me.</p>
+  <h1 style="position: relative; z-index: 1;">Welcome.</h1>
+  <p style="position: relative; z-index: 1;">A website created by me.</p>
 </div>
 
 <div class="navbar">
