--- a/index.html
+++ b/index.html
@@ -69,16 +69,16 @@ body {
 .side {
   -ms-flex: 30%; /* IE10 */
   flex: 30%;
-  background-color: #000022;
+  background-color: #000;
   padding: 20px;
-  color: #9999c1;
+  color: #00cd00;
 }
 
 /* Main column */
 .main {   
   -ms-flex: 70%; /* IE10 */
   flex: 70%;
-  background-color: #000017;
+  background-color: #000;
   padding: 20px;
   color: #6666a2;
 }
