--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {
   padding: 80px;
   text-align: center;
   background: transparent;
-  color: #fff;
+  color: #00cd00;
   position: relative;
   overflow: hidden;
 }
@@ -80,7 +80,7 @@ body {
   flex: 70%;
   background-color: #000;
   padding: 20px;
-  color: #6666a2;
+  color: #00cd00;
 }
 
 /* Fake image, just for this example */
