--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {
 .header {
   padding: 80px;
   text-align: center;
-  background: transparent;
+  background: #000;
   color: #00cd00;
   position: relative;
   overflow: hidden;
@@ -116,8 +116,8 @@ body {
 <body>
 
 <div class="header">
-  <video autoplay loop muted playsinline style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1;">
-    <source src="video (1080p).mp4" type="video/mp4" >
+  <video autoplay loop muted playsinline style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1; opacity:0.2;">
+    <source src="video (1080p).mp4" type="video/mp4">
   </video>
   <h1 style="position: relative; z-index: 1;">Welcome.</h1>
   <p style="position: relative; z-index: 1;">A website created by me.</p>
