--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {
   padding: 80px;
   text-align: center;
   background: #000;
-  color: #00cd00;
+  color: #fff;
   position: relative;
   overflow: hidden;
 }
@@ -69,7 +69,7 @@ body {
 .side {
   -ms-flex: 30%; /* IE10 */
   flex: 30%;
-  background-color: #000;
+  background-color: #000022;
   padding: 20px;
   color: #00cd00;
 }
@@ -78,7 +78,7 @@ body {
 .main {   
   -ms-flex: 70%; /* IE10 */
   flex: 70%;
-  background-color: #000;
+  background-color: #000017;
   padding: 20px;
   color: #00cd00;
 }
@@ -116,7 +116,7 @@ body {
 <body>
 
 <div class="header">
-  <video autoplay loop muted playsinline style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1; opacity:0.7;">
+  <video autoplay loop muted playsinline style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1;">
     <source src="video (1080p).mp4" type="video/mp4">
   </video>
   <h1 style="position: relative; z-index: 1;">Welcome.</h1>
