--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ body {
 .header {
   padding: 80px;
   text-align: center;
-  background: #000;
-  color: #fff;
+  background: transparent;
+  color: #00cd00;
   position: relative;
   overflow: hidden;
 }
@@ -69,7 +69,7 @@ body {
 .side {
   -ms-flex: 30%; /* IE10 */
   flex: 30%;
-  background-color: #000022;
+  background-color: #000;
   padding: 20px;
   color: #00cd00;
 }
@@ -78,7 +78,7 @@ body {
 .main {   
   -ms-flex: 70%; /* IE10 */
   flex: 70%;
-  background-color: #000017;
+  background-color: #000;
   padding: 20px;
   color: #00cd00;
 }
@@ -117,7 +117,7 @@ body {
 
 <div class="header">
   <video autoplay loop muted playsinline style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1;">
-    <source src="video (1080p).mp4" type="video/mp4">
+    <source src="video (1080p).mp4" type="video/mp4" >
   </video>
   <h1 style="position: relative; z-index: 1;">Welcome.</h1>
   <p style="position: relative; z-index: 1;">A website created by me.</p>
