--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {
   padding: 80px;
   text-align: center;
   background: transparent;
-  color: #00cd00;
+  color: #ff2a6d;
   position: relative;
   overflow: hidden;
 }
@@ -71,7 +71,7 @@ body {
   flex: 30%;
   background-color: #000022;
   padding: 20px;
-  color: #00cd00;
+  
 }
 
 /* Main column */
@@ -80,7 +80,7 @@ body {
   flex: 70%;
   background-color: #000017;
   padding: 20px;
-  color: #00cd00;
+  
 }
 
 /* Fake image, just for this example */
@@ -132,28 +132,28 @@ body {
 
 <div class="row">
   <div class="side">
-    <h2>About Me</h2>
-    <h5>Bio:</h5>
+    <h2 style="color: #05d9e8;">About Me</h2>
+    <h5 style="color: #05d9e8;">Bio:</h5>
     <div class="fakeimg" style="height:100px; width:80px;">Image</div>
-    <p>Winter aka Shubham Chaudhari👋<br>VITB '27🎓<br>Music🎸<br>Photography📸</p>
+    <p style="color: #d1f7ff;">Winter aka Shubham Chaudhari👋<br>VITB '27🎓<br>Music🎸<br>Photography📸</p>
   </div>
   <div class="main">
-    <h2>Languages</h2>
-    <h5>Projects and games created</h5>
+    <h2 style="color: #05d9e8;">Languages</h2>
+    <h5 style="color: #05d9e8;">Projects and games created</h5>
     <div class="fakeimg" style="height:200px;">Image</div>
-    <p>I have learnt* Some Programming Languages including C++, Python, HTML,CSS(ik these are not a prog. lang., but still),JavaScript, etc.<br>*('Learnt' here does not imply I have mastered these)</p>
-    <p>I like coding in C++ and python, which are obviously my strongest languages. I tried creating a Payroll Management system, a library management system, a game of Tic-Tac-Toe in C++, and a game of Rock,Paper,Scissors in Python. Not much🤷‍♂️</p>
+    <p style="color: #d1f7ff;">I have learnt* Some Programming Languages including C++, Python, HTML,CSS(ik these are not a prog. lang., but still),JavaScript, etc.<br>*('Learnt' here does not imply I have mastered these)</p>
+    <p style="color: #d1f7ff;">I like coding in C++ and python, which are obviously my strongest languages. I tried creating a Payroll Management system, a library management system, a game of Tic-Tac-Toe in C++, and a game of Rock,Paper,Scissors in Python. Not much🤷‍♂️</p>
     <br>
-    <h2>My Works</h2>
-    <h5>Some shit I created to quell my boredom</h5>
+    <h2 style="color: #05d9e8;">My Works</h2>
+    <h5 style="color: #05d9e8;">Some shit I created to quell my boredom</h5>
     <div class="fakeimg" style="height:200px;">Image</div>
-    <p>I love Music, and have contributed a wee bit to it. I create music (on my own, ofc) and post it on YouTube and Spotify.</p>
-    <p>I also like to click random pictures of anything i find beautiful or interesting, or downright ridiculous.</p>
+    <p style="color: #d1f7ff;">I love Music, and have contributed a wee bit to it. I create music (on my own, ofc) and post it on YouTube and Spotify.</p>
+    <p style="color: #d1f7ff;">I also like to click random pictures of anything i find beautiful or interesting, or downright ridiculous.</p>
   </div>
 </div>
 
 <div class="footer">
-  <h2 style="color: #00cd00">end of webpage.</h2>
+  <h2 style="color: #ff2a6d">end of webpage.</h2>
 </div>
 
 </body>
