--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@ body {
   <video autoplay loop muted playsinline style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1;">
     <source src="video (1080p).mp4" type="video/mp4" >
   </video>
+  <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.3); z-index: 0;"></div>
   <h1 style="position: relative; z-index: 1;">Welcome.</h1>
   <p style="position: relative; z-index: 1;">A website created by me.</p>
 </div>
