--- a/index.html
+++ b/index.html
@@ -156,6 +156,6 @@ body {
 <div class="footer">
   <h2 style="color: #ff2a6d">end of webpage.</h2>
 </div>
-
+<script src="scripts.js"></script>
 </body>
 </html>
