--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-<title>Welcome</title>
+<title>WinterSpace - Shubham Chaudhari's Personal Blog</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -120,8 +120,8 @@ body {
     <source src="video (1080p).mp4" type="video/mp4" >
   </video>
   <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.3); z-index: 0;"></div>
-  <h1 style="position: relative; z-index: 1;">Welcome.</h1>
-  <p style="position: relative; z-index: 1;">A website created by me.</p>
+  <h1 style="position: relative; z-index: 1;">Welcome to WinterSpace.</h1>
+  <p style="position: relative; z-index: 1;">A website created by me, for me.</p>
 </div>
 
 <div class="navbar">
