--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <title>WinterSpace - Shubham Chaudhari's Personal Blog</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="styles.css">
 <style>
 * {
   box-sizing: border-box;
