--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@ body {
   padding: 80px;
   text-align: center;
   background: transparent;
-  color: #ff2a6d;
+  color: #fff;
   position: relative;
   overflow: hidden;
+  font-size: 2em; /* Adjust as needed */
+  letter-spacing: 0.1em; /* Adjust as needed */
 }
 
 /* Increase the font size of the heading */
