--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body {
   padding: 80px;
   text-align: center;
   background: transparent;
-  color: #fff;
+  color: #00ffbf;
   position: relative;
   overflow: hidden;
   letter-spacing: 0.1em; /* Adjust as needed */
