--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ body {
 
 /* Increase the font size of the heading */
 .header h1 {
-  font-size: 80vw;
+  font-size: 80px;
 }
 
 /* Style the top navigation bar */
