--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ body {
 </div>
 
 <div class="footer">
-  <h2 style="color: #ff2a6d">end of webpage.</h2>
+  <h2 style="color: #00ffbf;">end of webpage.</h2>
 </div>
 <script src="scripts.js"></script>
 <div id="message" style="display: none;">
