--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ body {
   <div class="side">
     <h2 style="color: #05d9e8;">About Me</h2>
     <h5 style="color: #05d9e8;">Bio:</h5>
-    <div class="fakeimg" style="height:100px; width:80px;"><img src="20231112_1911444 (1).jpg" alt="Profile Photo" style="height:100px; width:80px;"></div>
+    <img src="20231112_1911444 (1).jpg" alt="Profile Photo" style="height:100px; width:80px;">
     <p style="color: #d1f7ff;">Winter aka Shubham Chaudhari👋<br>VITB '27🎓<br>Music🎸<br>Photography📸</p>
   </div>
   <div class="main">
