--- a/index.html
+++ b/index.html
@@ -138,8 +138,9 @@ body {
     <h2 style="color: #05d9e8;">About Me</h2>
     <h5 style="color: #05d9e8;">Bio:</h5>
     <img src="20231112_1911444 (1).jpg" alt="Profile Photo" style="height:100px; width:80px;">
-    <p style="color: #d1f7ff;">Winter aka Shubham Chaudhari👋<br>VITB '27🎓<br>Music🎸<br>Photography📸</p>
+    <p style="color: #d1f7ff;">Winter aka <link>Shubham Chaudhari</link>👋<br>VITB '27🎓<br>Music🎸<br>Photography📸</p>
   </div>
+</div>
   <div class="main">
     <h2 style="color: #05d9e8;">Languages</h2>
     <h5 style="color: #05d9e8;">Projects and games created</h5>
