--- a/index.html
+++ b/index.html
@@ -137,10 +137,9 @@ body {
   <div class="side">
     <h2 style="color: #05d9e8;">About Me</h2>
     <h5 style="color: #05d9e8;">Bio:</h5>
-    <img src="20231112_1911444.jpg" alt="Profile Photo" style="height:100px; width:71px;">
-    <p style="color: #d1f7ff;">Winter aka <link>Shubham Chaudhari</link>👋<br>VITB '27🎓<br>Music🎸<br>Photography📸</p>
+    <div class="fakeimg" style="height:100px; width:80px;">Image</div>
+    <p style="color: #d1f7ff;">Winter aka Shubham Chaudhari👋<br>VITB '27🎓<br>Music🎸<br>Photography📸</p>
   </div>
-</div>
   <div class="main">
     <h2 style="color: #05d9e8;">Languages</h2>
     <h5 style="color: #05d9e8;">Projects and games created</h5>
