--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ body {
   <div class="side">
     <h2 style="color: #05d9e8;">About Me</h2>
     <h5 style="color: #05d9e8;">Bio:</h5>
-    <div class="fakeimg" style="height:100px; width:80px;">Image</div>
+      <img src="20240107_185456.jpg" alt="codebg" style="position: absolute; top: 0; left: 0; width:100%; max-height:100%; z-index:-1;">
     <p style="color: #d1f7ff;">Winter aka Shubham Chaudhari👋<br>VITB '27🎓<br>Music🎸<br>Photography📸</p>
   </div>
   <div class="main">
