--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ body {
 </div>
 
 <div class="navbar">
-  <a href="#">Languages</a>
+  <a href="https://winter262005.github.io/languages.github.io/">Languages</a>
   <a href="#">Music</a>
   <a href="#">Photography</a>
   <a href="#" class="right">Home</a>
