--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@ body {
 
 <div class="navbar">
   <a href="https://winter262005.github.io/languages.github.io/">Languages</a>
-  <a href="#">Music</a>
-  <a href="#">Photography</a>
+  <a href="https://winter262005.github.io/music/">Music</a>
+  <a href="https://winter262005.github.io/photography/">Photography</a>
   <a href="#" class="right">Home</a>
 </div>
 
