--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ body {
     <h2 style="color: #05d9e8;">About Me</h2>
     <h5 style="color: #05d9e8;">Bio:</h5>
     <div class="fakeimg" style="height:100px; width:80px;">Image</div>
-    <p style="color: #d1f7ff;">Winter aka Shubham Chaudhari👋<br>VITB '27🎓<br>Music🎸<br>Photography📸</p>
+    <p style="color: #d1f7ff;">Winter aka Shubham Chaudhari👋<br>VITB '27🎓<br>Music🎸<br>Photography📸<br><br>Shubham Chaudhari (Scientific Name: W1NT3RMUSIC)<br>This species comes from Indore but his birthplace is Maharashtra. Commonly found loafing about, the habitat of this species is his room.</p>
   </div>
   <div class="main">
     <h2 style="color: #05d9e8;">Languages</h2>
