--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@ body {
 <div class="row">
   <div class="side">
     <h2 style="color: #05d9e8;">About Me</h2>
+    <div style="height:120px; width:100px; position:relative; overflow:hidden;">
+      <img src="20231112_191444 (1).jpg" style="position:absolute; width:100%;height:auto; top:0;left:0;">
+    </div>
     <h5 style="color: #05d9e8;">Bio:</h5>
     <p style="color: #d1f7ff;">Winter aka Shubham Chaudhari👋<br>VITB '27🎓<br>Music🎸<br>Photography📸<br><br>Shubham Chaudhari (Scientific Name: W1NT3RMUSIC)<br>This species comes from Indore but his birthplace is Maharashtra. Commonly found loafing about, the habitat of this species is his room.</p>
   </div>
